@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 04-08-2005 fixed: filerar. possible lockup at end of file.
+ - 04-08-2005 fixed: navigation issues in media windows when activated and last path was a rar.
+ - 04-08-2005 fixed: rar files created in unix would fail to play.
  - 04-08-2005 fixed: mplayer logged use of unimplemented function fputs
  - 04-08-2005 fixed: when ftp server was stopped (ie reboot, restartapp...), clients were not disconnected
  - 04-08-2005 fixed: audio was 5 ms later using normal audio output and 10 ms with passthrough
